--- a/test.ipynb
+++ b/test.ipynb
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "435b1c1aceb0434997e8b0cc2043abc8",
+       "model_id": "07286c651e594a53a26c3f28f65cce3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1050,13 +1050,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd4b23b199014ca9a574fa7473ae3e3d",
+       "model_id": "1d8b571dfee348d68dce5299b669f6c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1072,6 +1072,8 @@
      "output_type": "stream",
      "text": [
       "Number of compounds with PAINS: 0\n",
+      "Number of compounds without PAINS: 4\n",
+      "Number of compounds with PAINS: 0\n",
       "Number of compounds without PAINS: 4\n"
      ]
     }
@@ -1084,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1106,13 +1108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e4b3fe737504d1391842fedd89298f8",
+       "model_id": "3c37ce8b6d614550832098e31b656150",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1138,11 +1140,395 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c998c1a957a462f905fb12d07bc4a6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/4635 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "egfr_LeadLike = egfr_data"
+    "egfr_LeadLike = egfr_data[\"smiles\"].progress_apply(calculate_all, descriptors = True)\n",
+    "egfr_data = pd.concat([egfr_data, egfr_LeadLike], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>molecule_chembl_id</th>\n",
+       "      <th>IC50</th>\n",
+       "      <th>units</th>\n",
+       "      <th>smiles</th>\n",
+       "      <th>pIC50</th>\n",
+       "      <th>ro5_fulfilled</th>\n",
+       "      <th>molecular_weight</th>\n",
+       "      <th>n_hba</th>\n",
+       "      <th>n_hbd</th>\n",
+       "      <th>logp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ro5_rule</th>\n",
+       "      <th>pfizer_rule</th>\n",
+       "      <th>gsk_rule</th>\n",
+       "      <th>goldentriangle_rule</th>\n",
+       "      <th>qed</th>\n",
+       "      <th>qed_excellent</th>\n",
+       "      <th>sascore</th>\n",
+       "      <th>sascore_excellent</th>\n",
+       "      <th>fsp3</th>\n",
+       "      <th>fsp3_excellent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHEMBL63786</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>Brc1cccc(Nc2ncnc3cc4ccccc4cc23)c1</td>\n",
+       "      <td>11.522879</td>\n",
+       "      <td>True</td>\n",
+       "      <td>349.021459</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.28910</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.499383</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.002069</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CHEMBL35820</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>CCOc1cc2ncnc(Nc3cccc(Br)c3)c2cc1OCC</td>\n",
+       "      <td>11.221849</td>\n",
+       "      <td>True</td>\n",
+       "      <td>387.058239</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.93330</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.648824</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.105052</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.222222</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CHEMBL53711</td>\n",
+       "      <td>0.006</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>CN(C)c1cc2c(Nc3cccc(Br)c3)ncnc2cn1</td>\n",
+       "      <td>11.221849</td>\n",
+       "      <td>True</td>\n",
+       "      <td>343.043258</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.59690</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.786868</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.367369</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.133333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHEMBL66031</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>Brc1cccc(Nc2ncnc3cc4[nH]cnc4cc23)c1</td>\n",
+       "      <td>11.096910</td>\n",
+       "      <td>True</td>\n",
+       "      <td>339.011957</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.01220</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.578561</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.403664</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHEMBL53753</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>CNc1cc2c(Nc3cccc(Br)c3)ncnc2cn1</td>\n",
+       "      <td>11.096910</td>\n",
+       "      <td>True</td>\n",
+       "      <td>329.027607</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.57260</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.768616</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2.320482</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CHEMBL176582</td>\n",
+       "      <td>0.010</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>Cn1cnc2cc3ncnc(Nc4cccc(Br)c4)c3cc21</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>True</td>\n",
+       "      <td>353.027607</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.02260</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.590737</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.391051</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CHEMBL29197</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>COc1cc2ncnc(Nc3cccc(Br)c3)c2cc1OC</td>\n",
+       "      <td>10.602060</td>\n",
+       "      <td>True</td>\n",
+       "      <td>359.026939</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.15310</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.757494</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.993405</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.125000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CHEMBL174426</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>Cn1cnc2cc3c(Nc4cccc(Br)c4)ncnc3cc21</td>\n",
+       "      <td>10.602060</td>\n",
+       "      <td>True</td>\n",
+       "      <td>353.027607</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.02260</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.590737</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.409331</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CHEMBL1243316</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>C#CCNC/C=C/C(=O)Nc1cc2c(Nc3ccc(F)c(Cl)c3)c(C#N...</td>\n",
+       "      <td>10.522879</td>\n",
+       "      <td>True</td>\n",
+       "      <td>477.136781</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.75878</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.233348</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.965434</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.160000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CHEMBL363815</td>\n",
+       "      <td>0.037</td>\n",
+       "      <td>nM</td>\n",
+       "      <td>C=CC(=O)Nc1ccc2ncnc(Nc3cc(Cl)c(Cl)cc3F)c2c1</td>\n",
+       "      <td>10.431798</td>\n",
+       "      <td>True</td>\n",
+       "      <td>376.029395</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.94380</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.499138</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.365923</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  molecule_chembl_id   IC50 units  \\\n",
+       "0        CHEMBL63786  0.003    nM   \n",
+       "1        CHEMBL35820  0.006    nM   \n",
+       "2        CHEMBL53711  0.006    nM   \n",
+       "3        CHEMBL66031  0.008    nM   \n",
+       "4        CHEMBL53753  0.008    nM   \n",
+       "5       CHEMBL176582  0.010    nM   \n",
+       "6        CHEMBL29197  0.025    nM   \n",
+       "7       CHEMBL174426  0.025    nM   \n",
+       "8      CHEMBL1243316  0.030    nM   \n",
+       "9       CHEMBL363815  0.037    nM   \n",
+       "\n",
+       "                                              smiles      pIC50  \\\n",
+       "0                  Brc1cccc(Nc2ncnc3cc4ccccc4cc23)c1  11.522879   \n",
+       "1                CCOc1cc2ncnc(Nc3cccc(Br)c3)c2cc1OCC  11.221849   \n",
+       "2                 CN(C)c1cc2c(Nc3cccc(Br)c3)ncnc2cn1  11.221849   \n",
+       "3                Brc1cccc(Nc2ncnc3cc4[nH]cnc4cc23)c1  11.096910   \n",
+       "4                    CNc1cc2c(Nc3cccc(Br)c3)ncnc2cn1  11.096910   \n",
+       "5                Cn1cnc2cc3ncnc(Nc4cccc(Br)c4)c3cc21  11.000000   \n",
+       "6                  COc1cc2ncnc(Nc3cccc(Br)c3)c2cc1OC  10.602060   \n",
+       "7                Cn1cnc2cc3c(Nc4cccc(Br)c4)ncnc3cc21  10.602060   \n",
+       "8  C#CCNC/C=C/C(=O)Nc1cc2c(Nc3ccc(F)c(Cl)c3)c(C#N...  10.522879   \n",
+       "9        C=CC(=O)Nc1ccc2ncnc(Nc3cc(Cl)c(Cl)cc3F)c2c1  10.431798   \n",
+       "\n",
+       "   ro5_fulfilled  molecular_weight  n_hba  n_hbd     logp  ...  ro5_rule  \\\n",
+       "0           True        349.021459    3.0    1.0  5.28910  ...      True   \n",
+       "1           True        387.058239    5.0    1.0  4.93330  ...      True   \n",
+       "2           True        343.043258    5.0    1.0  3.59690  ...      True   \n",
+       "3           True        339.011957    4.0    2.0  4.01220  ...      True   \n",
+       "4           True        329.027607    5.0    2.0  3.57260  ...      True   \n",
+       "5           True        353.027607    5.0    1.0  4.02260  ...      True   \n",
+       "6           True        359.026939    5.0    1.0  4.15310  ...      True   \n",
+       "7           True        353.027607    5.0    1.0  4.02260  ...      True   \n",
+       "8           True        477.136781    6.0    3.0  4.75878  ...      True   \n",
+       "9           True        376.029395    4.0    2.0  4.94380  ...      True   \n",
+       "\n",
+       "   pfizer_rule  gsk_rule  goldentriangle_rule       qed  qed_excellent  \\\n",
+       "0         True     False                False  0.499383          False   \n",
+       "1         True     False                 True  0.648824          False   \n",
+       "2         True      True                 True  0.786868           True   \n",
+       "3         True     False                 True  0.578561          False   \n",
+       "4         True      True                 True  0.768616           True   \n",
+       "5         True     False                 True  0.590737          False   \n",
+       "6         True     False                 True  0.757494           True   \n",
+       "7         True     False                 True  0.590737          False   \n",
+       "8        False     False                False  0.233348          False   \n",
+       "9         True     False                 True  0.499138          False   \n",
+       "\n",
+       "    sascore  sascore_excellent      fsp3  fsp3_excellent  \n",
+       "0  2.002069               True  0.000000           False  \n",
+       "1  2.105052               True  0.222222           False  \n",
+       "2  2.367369               True  0.133333           False  \n",
+       "3  2.403664               True  0.000000           False  \n",
+       "4  2.320482               True  0.071429           False  \n",
+       "5  2.391051               True  0.062500           False  \n",
+       "6  1.993405               True  0.125000           False  \n",
+       "7  2.409331               True  0.062500           False  \n",
+       "8  2.965434               True  0.160000           False  \n",
+       "9  2.365923               True  0.000000           False  \n",
+       "\n",
+       "[10 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "egfr_data.head(10)"
    ]
   }
  ],
