--- a/13_Flame_Chasers.ipynb
+++ b/13_Flame_Chasers.ipynb
@@ -27,7 +27,9 @@
     "from rdkit.Chem.Draw import IPythonConsole\n",
     "from tqdm.auto import tqdm\n",
     "tqdm.pandas()\n",
-    "os.chdir(\"./Data/\")\n"
+    "os.chdir(\"./Data/\")\n",
+    "\n",
+    "# pip install scopy"
    ]
   },
   {
