--- a/13_Flame_Chasers.ipynb
+++ b/13_Flame_Chasers.ipynb
@@ -718,28 +718,22 @@
     "    SP3 = Chem.rdMolDescriptors.CalcFractionCSP3(molecule)\n",
     "    \n",
     "    # Calculate Cyc and Acyc\n",
-    "    C_cyclic = 0\n",
     "    Csp3_cyclic = 0\n",
-    "    C_acyclic = 0\n",
     "    Csp3_acyclic = 0\n",
+    "    C_total = 0\n",
     "    CYC = 0\n",
     "    ACYC = 0\n",
     "    \n",
     "    for atom in molecule.GetAtoms():\n",
-    "        if sum([atom.GetSymbol() == 'C', atom.IsInRing()]) == 2:\n",
-    "            C_cyclic += 1\n",
-    "            if atom.GetHybridization() == Chem.HybridizationType.SP3:\n",
-    "                Csp3_cyclic += 1\n",
-    "        \n",
-    "        if sum([atom.GetSymbol() == 'C', not atom.IsInRing()]) == 2:\n",
-    "            C_acyclic += 1\n",
-    "            if atom.GetHybridization() == Chem.HybridizationType.SP3:\n",
-    "                Csp3_acyclic += 1\n",
+    "        if atom.GetAtomicNum() == 6: C_total+=1\n",
+    "        if sum([atom.GetAtomicNum() == 6, atom.IsInRing(), atom.GetHybridization() == Chem.HybridizationType.SP3]) == 3:\n",
+    "            Csp3_cyclic += 1\n",
+    "        if sum([atom.GetAtomicNum() == 6, not atom.IsInRing(), atom.GetHybridization() == Chem.HybridizationType.SP3]) == 3:\n",
+    "            Csp3_acyclic += 1\n",
     "    \n",
-    "    if C_cyclic > 0:\n",
-    "        CYC = Csp3_cyclic/C_cyclic\n",
-    "    if C_acyclic > 0:\n",
-    "        ACYC = Csp3_acyclic/C_acyclic\n",
+    "    if C_total>0:\n",
+    "        CYC = Csp3_cyclic/C_total\n",
+    "        ACYC = Csp3_acyclic/C_total\n",
     "    \n",
     "    # Calculate Q1\n",
     "    deltas=[x.GetDegree() for x in molecule.GetAtoms()]\n",
@@ -1091,7 +1085,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "83053a333a8e417fb7cf1e39c6000e0b",
+       "model_id": "a248d8ba47a449828c03774bf5747525",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1522,7 +1516,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11667b1eed784a31a3a85e1bb200655e",
+       "model_id": "b98cfb73a62542fa9c34de5301ca8a9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1561,6 +1555,27 @@
      "text": [
       "Dataframe shape: (4635, 10)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0                       Brc1cccc(Nc2ncnc3cc4ccccc4cc23)c1\n",
+       "1                     CCOc1cc2ncnc(Nc3cccc(Br)c3)c2cc1OCC\n",
+       "2                      CN(C)c1cc2c(Nc3cccc(Br)c3)ncnc2cn1\n",
+       "3                     Brc1cccc(Nc2ncnc3cc4[nH]cnc4cc23)c1\n",
+       "4                         CNc1cc2c(Nc3cccc(Br)c3)ncnc2cn1\n",
+       "                              ...                        \n",
+       "4630                          COc1cc(C=C(C#N)C#N)cc(C)c1O\n",
+       "4631                               O=C(O)/C=C/c1ccc(O)cc1\n",
+       "4632    CN(c1cccnc1)c1cc2c(Nc3ccc(F)c(Cl)c3)c(C#N)cnc2cn1\n",
+       "4633                                N#CC(C#N)Cc1ccc(O)cc1\n",
+       "4634                    O=C(CCc1ccc(O)cc1)c1c(O)cc(O)cc1O\n",
+       "Name: smiles, Length: 4635, dtype: object"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1569,7 +1584,9 @@
     ")\n",
     "# Drop unnecessary information\n",
     "print(\"Dataframe shape:\", egfr_data.shape)\n",
-    "egfr_data.drop(columns=[\"molecular_weight\", \"n_hbd\", \"n_hba\", \"logp\"], inplace=True)"
+    "egfr_data.drop(columns=[\"molecular_weight\", \"n_hbd\", \"n_hba\", \"logp\"], inplace=True)\n",
+    "egfr_data.reset_index(drop = True, inplace = True)\n",
+    "egfr_data[\"smiles\"]"
    ]
   },
   {
@@ -1580,7 +1597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e5789d9631e490493eae3fbf81e96f0",
+       "model_id": "2607fb6db6534ef686b7da6193a685fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2392,6 +2409,93 @@
    "source": [
     "egfr_LeadLike.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    85.729730\n",
+       "1    46.400000\n",
+       "2    25.517241\n",
+       "3    45.500000\n",
+       "Name: mce18, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "molecules[\"mce18\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from mce18 import MCE18\n",
+    "\n",
+    "# MCE18(Chem.MolFromSmiles(egfr_data[\"smiles\"][3307])).CalculateMCE18()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[Cl-].[Cl-].[Zn+2]'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "egfr_data[\"smiles\"][3307]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "egfr_data[\"mce18\"][3307]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
